--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Arman Mohammadi"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : &name "Arman Mohammadi"
+description              : &description "Civil and Environmental Engineer"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://EzArmanim.github.io/Arman-Mohammadi/" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
