--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ author:
   email: "arman.mohammadi@studenti.polito.it"
   github: "EzArmanim"
   linkedin: "arman-mohamadi"
-  googlescholar: "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar: "https://scholar.google.co.uk/citations?hl=en&pli=1&user=bZie56oAAAAJ"
 
-  orcid            : "https://orcid.org/" # replace with your ORCID if you have one
+  orcid            : "https://orcid.org/0009-0003-8177-8884" # replace with your ORCID if you have one
   researchgate     : # add if you have
   scopus           : # add if you have
 
