--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,7 @@ defaults:
       share: true
   - scope:
       path: ""
-      type: portfolio
+      type: certificates
     values:
       layout: single
       author_profile: true
